--- a/Milestone_one.html
+++ b/Milestone_one.html
@@ -10,5 +10,11 @@
 
 <body>
   <h1>This is Milestone one</h1>
+  <ul>
+    <li>Content 1</li>
+    <li>Content 2</li>
+    <li>Content 3</li>
+    <li>Content 4</li>
+  </ul>
 </body>
 </html>
