--- a/Milestone_one.html
+++ b/Milestone_one.html
@@ -7,7 +7,7 @@
 
   </style>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!--<script>
+  <script type="jquery">
   $(document).ready(function() {
     var myItems;
 
@@ -17,20 +17,10 @@
     });
   });
 
-</script>-->
+  </script>
 </head>
 <body>
 
-  <script>
-  $(document).ready(function() {
-    var myItems;
-
-    $.getJSON('https://www.googleapis.com/books/v1/volumes?q=modern%20web', function(data){
-      myItems = data.items;
-      cosole.log(myItems);
-    });
-  });
-  </script>
   <h1>This is Milestone one</h1>
   <ul>
     <li>Content 1</li>
