Changed to google books for now

--- a/Milestone_one.html
+++ b/Milestone_one.html
@@ -13,7 +13,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>
     $.ajax({
-      url: 'http://it-ebooksapi.info/v1/search/modern%20web',
+      url: 'https://www.googleapis.com/books/v1/volumes?q=modern%20web',
       dataType: 'json',
       type: 'get',
       success: function(data){
