--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
     border-left: 1px solid black;
     padding: 1em;
     overflow: hidden;
+    /*
+    useful for creating two columns
+
+    margin: 10px 0 10px 10px;
+    width: 465px;
+    float: left;*/
   }
 
   </style>
