--- a/Milestone_one.html
+++ b/Milestone_one.html
@@ -10,19 +10,12 @@
 </head>
 <body>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script>
-    $.getJSON('http://it-ebooksapi.info/v1/search/modern%20web', function(data){
-      console.log(data);
-    });
-  </script>
-
   <h1>This is Milestone one</h1>
   <ul>
     <li><a href="content_1.html">Content 1</a></li>
-    <li>Content 2</li>
+    <li><a href="content_2.html">Content 2</a></li>
     <li><a href="content_3.html">Content 3</a></li>
-    <li>Content 4</li>
+    <li><a href="content_4.html">Content 4</a></li>
   </ul>
 </body>
 </html>
