--- a/content_1.html
+++ b/content_1.html
@@ -41,6 +41,9 @@
     });
   </script>
   <div class="container">
+    <h1><u>Content 1</u></h1>
+    <p>I took this JSON file from a past students github. I got the single book to return but not the multibook.
+    It won't reconize the file and keeps telling me that there is a "XML Parsing Error: not well-formed". I don't know why.</p>
 
   </div>
 
