--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
   <aside>
     <article>
       <h1>Current Info</h1>
-      <p>Milestone one is currently being completed. Will update once it is done.</p>
+      <p>The homepage is a work in progress.</p>
+      <p></p>
     </article>
   </aside>
 
