--- a/index.html
+++ b/index.html
@@ -1,17 +1,6 @@
 <!--
 *****ToDo list******
 
-1. Homepage that gives an overview of entire project including:
-  - Title
-  - Name
-  - Site Description
-  - Affiliation
-  - Project information with table of contents listing four milestones. Create
-    a link on each milestone name linking to the milestone page in the future
-    once your milestone page is ready.
-
-
-
 -->
 <!DOCTYPE html>
 <html>
@@ -58,12 +47,9 @@
     border-left: 1px solid black;
     padding: 1em;
     overflow: hidden;
-    /*
-    useful for creating two columns
-
     margin: 10px 0 10px 10px;
     width: 465px;
-    float: left;*/
+    float: left;
   }
 
   </style>
