--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <nav>
 
   <a href="Milestone_one.html">Milestone 1</a><br>
-  <a href="Milestone_two.html">Milestone 2</a><br>
+  <a href="Book_search.html">Milestone 2</a><br>
   <a href="Milestone_three.html">Milestone 3</a><br>
   <a href="Milestone_four.html">Milestone 4</a>
   </nav>
