--- a/Bookshelf.html
+++ b/Bookshelf.html
@@ -3,18 +3,49 @@
 <head>
   <meta charset="utf-8">
   <title> Bookshelf </title>
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <style>
   h1{
     text-align: center;
+  }
+  .bookdiv{
+    border-style: solid;
+    border-width: 3px;
+    margin: auto;
+    padding: 20px, 20px, 20px, 20px;
   }
 
   </style>
 
 </head>
+<script>
+$(function () {
+
+      var service_point = "https://www.googleapis.com/books/v1/users/105047901426113871576/bookshelves/0/volumes";
+
+      $.getJSON(service_point, function (json) {
+          resultHTML = "";
+          console.log(json);
+          for (i in json.items) {
+              var booktitle = json.items[i].volumeInfo.title;
+              var bookid = json.items[i].id;
+              var cover = json.items[i].volumeInfo.imageLinks.smallThumbnail;
+
+              resultHTML += "<div class='bookdiv'>";
+              resultHTML += "<img src='" + cover + "' style='float: left' />";
+              resultHTML += "<a href='bookinfo.html?id=" + bookid + "'>" + booktitle + "</a>";
+              resultHTML += "</div>";;
+          }
+          $("#results").html(resultHTML);
+          $(".bookdiv").css("width", "300px");
+      });
+  });
+</script>
 <body>
 
   <h1><u>Michael's Bookshelf</u></h1>
-  <a href="Milestone_two.html" style="text-align: left;">Back</a>
+  <a href="Book_search.html" style="text-align: left;">Back</a><br><br>
+  <div id='results' style="display: flex; flex-wrap: wrap;"></div>
 
 </body>
 </html>
