--- a/index.html
+++ b/index.html
@@ -66,21 +66,14 @@
 
   <a href="Milestone_one.html">Milestone 1</a><br>
   <a href="Book_search.html">Milestone 2</a><br>
-  <a href="Milestone_three.html">Milestone 3</a><br>
-  <a href="Milestone_four.html">Milestone 4</a>
+  <a href="Milestone 3.html">Milestone 3</a><br>
+  <a href="Milestone 4.html">Milestone 4</a><br>
+  <a href="Term_Project.html">Term Project</a>
   </nav>
 
-  <aside>
-    <article>
-      <h1>Current Info</h1>
-      <p>The homepage is a work in progress. I took the first two JSON files from a past student. The multibook one wouldn't work for me, not sure why.</p>
-      <p></p>
-    </article>
-  </aside>
-
   <article>
-    <h1>Milestone 1</h1>
-    <p>This Milestone is complete.</p>
+    <h1>Term Project</h1>
+    <p>I got as far as I could.</p>
   </article>
   <footer></footer>
 
